Retrieve and update values for a specific merkle tree
