# src/main/java/com/merkletree/regular/controller/RegularController.java
@@ -4,6 +4,7 @@ import com.merkletree.model.LeafNodesDto;
 import com.merkletree.regular.mapper.NodesMapper;
 import com.merkletree.regular.services.MerkleTreeService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -11,9 +12,11 @@ import com.merkletree.api.MerkleTreeApi;
 
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 
 @RestController
 @RequiredArgsConstructor
+@Slf4j
 public class RegularController implements MerkleTreeApi
 {
     private final MerkleTreeService merkleTreeService;
@@ -21,44 +24,45 @@ public class RegularController implements MerkleTreeApi
     private final NodesMapper nodesMapper;
 
     @Override
-    public ResponseEntity<Void> createMerkleTree(LeafNodesDto leafNodesDto)
+    public ResponseEntity<UUID> createMerkleTree(LeafNodesDto leafNodesDto)
     {
-        merkleTreeService.createMerkleTree(leafNodesDto);
+        var merkleTreeId = merkleTreeService.createMerkleTree(leafNodesDto);
 
-        return new ResponseEntity<>(HttpStatus.CREATED);
+        return new ResponseEntity<>(merkleTreeId, HttpStatus.CREATED);
     }
 
     @Override
-    public ResponseEntity<Map<String, String>> getMerkleTree()
-    {
-        var merkleTreeNodes = merkleTreeService.getMerkleTree();
-
-        var merkleTreeNodesDto = nodesMapper.nodeDboToDto(merkleTreeNodes);
-
-        return new ResponseEntity<>( merkleTreeNodesDto,HttpStatus.OK);
-    }
-
-    @Override
-    public ResponseEntity<List<String>> getProofOfMembership(Integer leafIndex, String leafValue)
-    {
-        var proofOfMembership = merkleTreeService.getProofOfMembership(leafIndex, leafValue);
-
-        return new ResponseEntity<>(proofOfMembership, HttpStatus.OK);
-    }
-
-    @Override
-    public ResponseEntity<Void> updateLeaf(Integer leafIndex, String leafValue)
-    {
-        merkleTreeService.updateLeaf(leafIndex, leafValue);
-
-        return new ResponseEntity<>(HttpStatus.OK);
-    }
-
-    @Override
-    public ResponseEntity<String> getMerkleProof()
+    public ResponseEntity<String> getMerkleProof(UUID merkleTreeId)
     {
         var merkleProof = merkleTreeService.getMerkleProof();
 
         return new ResponseEntity<>(merkleProof, HttpStatus.OK);
     }
+
+    @Override
+    public ResponseEntity<Map<String, String>> getMerkleTree(UUID merkleTreeId)
+    {
+        var merkleTreeNodes = merkleTreeService.getMerkleTree(merkleTreeId);
+
+        var merkleTreeNodesDto = nodesMapper.nodeDboToDto(merkleTreeNodes);
+
+        return new ResponseEntity<>(merkleTreeNodesDto, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<List<String>> getProofOfMembership(UUID merkleTreeId, Integer leafIndex, String leafValue)
+    {
+        var proofOfMembership = merkleTreeService.getProofOfMembership(merkleTreeId, leafIndex, leafValue);
+
+        return new ResponseEntity<>(proofOfMembership, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Void> updateLeaf(UUID merkleTreeId, LeafNodesDto leafNodesDto)
+    {
+        merkleTreeService.updateLeaf(merkleTreeId, leafNodesDto);
+
+        return new ResponseEntity<>(HttpStatus.OK);
+    }
+
 }
